--- a/index.html
+++ b/index.html
@@ -26,9 +26,26 @@
     </div>
     <script>
       const table = jQuery('#data').DataTable({paging: false});
+      let user = getUserFromLocation();
+      if (!user) {
+        user = getUserViaPrompt();
+      }
+      if (user) {
+        aiuser(user);
+      }
 
-      aiuser();
-      function aiuser(options) {
+      function getUserFromLocation() {
+        if (!URLSearchParams) return;
+        if (!location.search) return;
+        const params = new URLSearchParams(location.search);
+        return params.get('user');
+      }
+
+      function getUserViaPrompt() {
+        return prompt('Specify Wikimedia username!');
+      }
+
+      function aiuser(user, options) {
         const url =
           'https://commons.wikimedia.org/w/api.php?' +
           $.param(
@@ -38,7 +55,7 @@
                 format: 'json',
                 origin: '*',
                 list: 'allimages',
-                aiuser: 'simon04',
+                aiuser: user,
                 aisort: 'timestamp',
                 aiprop: 'timestamp|url|metadata',
                 ailimit: 500
@@ -56,7 +73,7 @@
             });
             table.draw();
             if (data.continue) {
-              return aiuser(data.continue);
+              return aiuser(user, data.continue);
             }
           });
       }
