commons-aiuser.toolforge.org

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       const table = jQuery('#data').DataTable({
         ajax: {
-          url: 'https://tools.wmflabs.org/commons-aiuser/api.php?user=' + encodeURIComponent(user),
+          url: 'https://commons-aiuser.toolforge.org/api.php?user=' + encodeURIComponent(user),
           dataSrc: ''
         },
         paging: false,
